# SIFT

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  ubuntu_cv.sh
report/: .~lock.report.odt#  report.odt
src/: CMakeLists.txt  constants.hpp  find_interest_points.cpp  internal.cpp  internal.hpp  main.cpp  orientations.cpp  scale_space.cpp  sift.hpp  templates.hpp  test.cpp  utils.cpp
src/test/: buildGaussianPyramid_test.cpp  dog_tests.cpp  extrema_tests.cpp  orientations_tests.cpp  test.cpp  test.hpp  utils_tests.cpp
